--- a/src/views/checklists/index.ejs
+++ b/src/views/checklists/index.ejs
@@ -1,52 +1,52 @@
-<%- include('../layouts/header', {title: 'Lista de Tarefas'}) %>
+<%- include('../layouts/header', { title: 'Checklists' }) %>
 
 <%- include('../layouts/menu') %>
 
 <section class="section">
     <div class="container">
-        <div class="columns">
-            <div class="column is-four-fifths">
-                <h1 class="title size-4">Listas de Tarefas</h1>
-            </div>
-            <div class="column is-one-fifth">
-                <a href="checklist-form.html" class="button is-success is-small">Nova Lista</a>
-            </div>
+      <div class="columns">
+        <div class="column is-four-fifths">
+          <h1 class="title size-4">All Checklists</h1>
         </div>
+        <div class="column is-one-fifth">
+          <a href="/checklists/new" class="button is-link is-small">New List</a>
+        </div>
+      </div>
 
-        <div class="columns is-multiline">
-                <% checklists.forEach(checklist => { %>
-                <div class="column is-one-quarter">
-                    <div class="card has-background-white-ter">
-                        <div class="card-content">
-                        <p class="subtitle is-size-5">
-                            <% checklist.name %>
-                        </p>
-                        <p class="subtitle is-size-6">
-                           <% checklist.tasks.count %>
-                        </p>
-                        </div>
-                        <footer class="card-footer">
-                        <p class="card-footer-item">
-                            <span>
-                            <a href="/checklists/<%= checklist._id %>">Ver</a>
-                            </span>
-                        </p>
-                        <p class="card-footer-item">
-                            <span>
-                            <a href="checklist-form.html">Editar</a>
-                            </span>
-                        </p>
-                        <p class="card-footer-item">
-                            <span>
-                            <a href="#" class="has-text-danger">Remover</a>
-                            </span>
-                        </p>
-                        </footer>
-                    </div>
-                </div>
-            <% }) %>
-        </div>
+      <div class="columns is-multiline">
+        <% checklists.forEach(checklist => { %>
+          <div class="column is-one-quarter">
+            <div class="card">
+              <div class="card-content">
+                <p class="subtitle is-size-5">
+                  <%= checklist.name %>
+                </p>
+                <p class="subtitle is-size-6">
+                  <%= checklist.tasks.length %> tasks
+                </p>
+              </div>
+              <footer class="card-footer">
+                <p class="card-footer-item">
+                  <span>
+                    <a href="/checklists/<%= checklist._id %>">View</a>
+                  </span>
+                </p>
+                <p class="card-footer-item">
+                  <span>
+                    <a href="/checklists/<%= checklist._id %>/edit">Edit</a>
+                  </span>
+                </p>
+                <p class="card-footer-item">
+                  <span>
+                    <a href="/checklists/<%= checklist._id %>?_method=delete" class="has-text-danger">Delete</a>
+                  </span>
+                </p>
+              </footer>
+            </div>
+          </div>
+        <% }) %>
+      </div>
     </div>
-  </section>
+</section>
 
-  <%- include('../layouts/footer') %>
+<%- include('../layouts/footer') %>
