--- a/src/views/checklists/show.ejs
+++ b/src/views/checklists/show.ejs
@@ -1,33 +1,37 @@
-<%- include('../layouts/header', {title: checklist.name}) %>
+<%- include('../layouts/header', { title: checklist.name }) %>
 
 <%- include('../layouts/menu') %>
 
 <section class="section">
     <div class="container">
-      <div class="columns">
-        <div class="column is-four-fifths">
-          <h1 class="title size-4"></h1>
-        </div>
-        <div class="column is-one-fifth">
-          <a href="add-task.html" class="button is-success is-small">Nova Tarefa</a>
-          <a href="index.html" class="button is-small">Voltar</a>
-        </div>
-      </div>
-
-      <hr />
-
-      
+      <div class="main-card card">
         <div class="columns">
-          <div class="column is-four-fifths">
-            <input type="checkbox" />
+          <div class="column">
+            <h1 class="title size-4"><%= checklist.name %></h1>
           </div>
-
-          <div class="column is-one-fifth">
-            <button class="button is-danger is-small">Remover</button>
+          <div class="column is-one-third">
+            <a href="/checklists/<%= checklist._id %>/tasks/new" class="button is-link is-small">New Task</a>
+            <a href="/checklists" class="button is-small">Back</a>
           </div>
         </div>
 
-    </div>
-  </section>
+        <hr />
 
-  <%- include('../layouts/footer') %>
+        <% checklist.tasks.forEach(task => { %>
+          <div class="columns">
+              <div class="column is-four-fifths <%= task.done ? 'has-text-success is-italic' : '' %>">
+                <input type="checkbox" onchange="setTagAsDone(this, '<%= task._id %>')" <%= task.done ? 'checked' : '' %>/>
+                <%= task.name %>
+              </div>
+              <div class="column is-one-fifth">
+                <a href="/tasks/<%= task._id %>?_method=delete" class="button is-danger is-small">Remove</a>
+              </div>
+          </div>
+        <% }) %>
+      </div>
+    </div>
+</section>
+
+<script src="/javascripts/tasks.js"></script>
+
+<%- include('../layouts/footer') %>
