--- a/src/views/layouts/header.ejs
+++ b/src/views/layouts/header.ejs
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="/stylesheets/bulma.min.css">
-  <script src="/javascripts/tasks.js"></script>
-  <title><%= title %></title>
+  <link rel="stylesheet" href="/stylesheets/style.css">
+  <script src="/scripts/tasks.js"></script>
+  <title>
+    <%= title %> | todoList App 
+  </title>
 </head>
+
 <body>
