--- a/src/views/checklists/edit.ejs
+++ b/src/views/checklists/edit.ejs
@@ -1,14 +1,14 @@
-
-
-<%- include('../layouts/header', {title: 'Edit tasks list'}) %>
+<%- include('../layouts/header', {title: 'Edit checklist' }) %>
 
 <%- include('../layouts/menu') %>
 
-<section class="section">
-    <div class="container">
-        <h1 class="title size-4">Edit list</h1>
-        <%- include('form', {url: `/checklists/${checklist.id}/?_method=put`, checklist: checklist}) %>
-    </div>
-</section>
+        <section class="section">
+            <div class="container">
+                <h1 class="title size-4">Edit list</h1>
+                <%= checklist.name %>
+                    </h1>
+                    <%- include('form', {url: `/checklists/${checklist.id}/?_method=put`, checklist: checklist}) %>
+            </div>
+        </section>
 
 <%- include('../layouts/footer') %>
