--- a/src/views/checklists/form.ejs
+++ b/src/views/checklists/form.ejs
@@ -1,14 +1,17 @@
 <form method="post" action="<%= url %>">
     <div class="field">
-        <label class="label">Nome</label>
+        <label class="label">Name</label>
         <div class="control">
-            <input class="input" type="text" name="checklist[name]" placeholder="Lista de Tarefas" value="<%= checklist.name %>">
+            <input class="input" type="text" name="checklist[name]" placeholder="Ex.: Morning tasks"
+                value="<%= checklist.name %>" required autofocus>
             <% if(checklist.error && checklist.error.hasOwnProperty('name')) { %>
-            <p class="is-danger help"><% checklist.error.name.message %></p>
-            <% } %>
+                <p class="is-danger help">
+                    <% checklist.error.name.message %>
+                </p>
+                <% } %>
         </div>
     </div>
 
-    <button type="submit" class="button is-success">Salvar</button>
-    <a href="/checklists" class="button">Cancelar</a>
+    <button type="submit" class="button is-success">Save</button>
+    <a href="/checklists" class="button">Cancel</a>
 </form>
