--- a/src/views/layouts/menu.ejs
+++ b/src/views/layouts/menu.ejs
@@ -1,12 +1,7 @@
 <nav class="navbar is-black">
-    <div class="navbar-brand">
-      <a class="navbar-item" href="#">
-        TODO-List
-      </a>
-      <div class="navbar-burger burger" data-target="navMenuColorblack-example">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-    </div>
+  <div class="navbar-brand">
+    <a class="navbar-item" href="/">
+      todoList App
+    </a>
+  </div>
 </nav>
