--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -1,17 +1,17 @@
-<%- include('../layouts/header', {title: 'linguiça toscana'}) %>
+<%- include('../layouts/header', {title: 'Home'}) %>
 
 <%- include('../layouts/menu') %>
 
 <section class="section hero is-link is-fullheight-with-navbar">
   <div class="hero-body has-text-centered">
     <div class="container">
-      <h1 class="title">
-        TODO-List
+      <h1 class="title" id="homepage-title">
+        todoList App!
       </h1>
-      <h2 class="subtitle">
-        Geranciando nossas atividades diárias =D
+      <h2 class="subtitle" id="homepage-subtitle">
+        Manage your daily stasks with todoList App =D
       </h2>
-      <a href="/checklists" class="button is-light is-medium">Ir para Listas de Atividades!</a>
+      <span><a href="/checklists" class="button" id="menu-button">Go to checklists!</a></span>
     </div>
   </div>
 </section>
